--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,4 +10,6 @@
 
 body {
   background-color: #f6f6f6;
+  overflow: hidden;
+  position: relative;
 }
